add vref to version

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ build_flags =
   -D OTA_DIR=//diskstation2/web/fota/
   -D DOMOTICZ_ID=93
   -D OTA_URL=http://192.168.0.39/fota/
+  -D V_REFERENCE=7.10000
 
 [env:d1_mini]
 platform = espressif8266
